# AEDA-Lucas-Miguel-Rafael

./: CMakeLists.txt  Empresa.h  Reserva.h  clientes.txt  empresa.txt  main.cpp  reservas.txt  veiculos.txt
Documentation/html/: _empresa_8h_source.html  _hora_8h_source.html  _menu_8h_source.html  _preferencia_8h_source.html  _veiculo_8h_source.html  annotated.html  annotated_dup.js  class_cliente-members.html  class_cliente.html  class_cliente_dono.html  class_cliente_dono.js  class_cliente_dono__inherit__graph.dot  class_data.js  class_empresa.js  class_hora.js  class_menu-members.html  class_menu.html  class_preferencia-members.html  class_preferencia.html  class_preferencia.js  class_reserva-members.html  class_reserva.html  class_reserva.js  class_veiculo-members.html  class_veiculo.html  class_veiculo.js  class_veiculo_comercial.html  class_veiculo_comercial.js  class_veiculo_passageiros.html  class_veiculo_passageiros__coll__graph.dot  class_visitante.html  class_visitante_registado.html  class_visitante_registado.js  class_visitante_registado__coll__graph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  functions.html  functions_func.html  functions_vars.html  (+7 more)
Documentation2/html/: _data_8h_source.html  _empresa_8h_source.html  (+57 more)
src/: Contract.cpp  Contract.h  Data.cpp  Data.h  Empresa.cpp  Empresa.h  Hora.cpp  Hora.h  Menu.cpp  Menu.h  Preferencia.cpp  Preferencia.h  Reserva.cpp  Reserva.h  Transacao.cpp  Transacao.h  Utilizador.cpp  Utilizador.h  Veiculo.cpp  Veiculo.h  bst.h  main.cpp  tests.cpp
(+647 files in other folders)
